# esp-data-collection-mcu

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  http_server.c  main.c  mqtt_esp_client.c  mqtt_esp_client.h  prometheus_pusher.c  prometheus_pusher.h  rgb_led.c  rgb_led.h  sntp_time_sync.c  sntp_time_sync.h  tasks_common.h  wifi_app.c  wifi_reset_button.c
main/webpage/: app.js  index.html
